--- a/README
+++ b/README
@@ -5,6 +5,8 @@ See samples/index.html for more details and go on my web page : http://prototype
 
 == Change log  
 
+- 07/12/13  V 1.3
+            - Added: port to jQuery 10.1.2
 TDOD:http://pwc-forum.xilinus.com/forums/4/topics/104?page=1#posts-324      
 - 04/23/07  V 1.3
             - Added: getTitle
